# vacancy_parser

./: README.md  main.py  pyproject.toml  utils.py
